fixed a few layout issues

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -175,9 +175,7 @@ ol.skills li {
 }
 
 .skill-list ul a {
-    float: left;
-    width: 100px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 #content {
@@ -292,6 +290,7 @@ table {
 }
 tr {
     border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
 }
 td {
     border-left: 2px solid #fff;
